@@ -41,8 +41,8 @@ Component::Component(const string& className, const string& visibleClassName)
 	, m_className(className)
 	, m_visibleClassName(visibleClassName)
 {
-	AddVariableString("name", &m_name);
-	AddVariableString("template", &m_template);
+	AddVariable("name", &m_name);
+	AddVariable("template", &m_template);
 }
 
 
@@ -634,160 +634,6 @@ const StateVariable* Component::GetVariable(const string& name) const
 		return NULL;
 	else
 		return &(it->second);
-}
-
-
-bool Component::AddVariableString(const string& name, string* variablePointer)
-{
-	StateVariableMap::iterator it = m_stateVariables.find(name);
-	if (it != m_stateVariables.end()) {
-		assert(false);
-		return false;
-	}
-
-	m_stateVariables[name] = StateVariable(name, variablePointer);
-
-	return true;
-}
-
-
-bool Component::AddVariableDouble(const string& name, double* variablePointer)
-{
-	StateVariableMap::iterator it = m_stateVariables.find(name);
-	if (it != m_stateVariables.end()) {
-		assert(false);
-		return false;
-	}
-
-	m_stateVariables[name] = StateVariable(name, variablePointer);
-
-	return true;
-}
-
-
-bool Component::AddVariableBool(const string& name, bool* variablePointer)
-{
-	StateVariableMap::iterator it = m_stateVariables.find(name);
-	if (it != m_stateVariables.end()) {
-		assert(false);
-		return false;
-	}
-
-	m_stateVariables[name] = StateVariable(name, variablePointer);
-
-	return true;
-}
-
-
-bool Component::AddVariableUInt8(const string& name, uint8_t* variablePointer)
-{
-	StateVariableMap::iterator it = m_stateVariables.find(name);
-	if (it != m_stateVariables.end()) {
-		assert(false);
-		return false;
-	}
-
-	m_stateVariables[name] = StateVariable(name, variablePointer);
-
-	return true;
-}
-
-
-bool Component::AddVariableUInt16(const string& name, uint16_t* variablePointer)
-{
-	StateVariableMap::iterator it = m_stateVariables.find(name);
-	if (it != m_stateVariables.end()) {
-		assert(false);
-		return false;
-	}
-
-	m_stateVariables[name] = StateVariable(name, variablePointer);
-
-	return true;
-}
-
-
-bool Component::AddVariableUInt32(const string& name, uint32_t* variablePointer)
-{
-	StateVariableMap::iterator it = m_stateVariables.find(name);
-	if (it != m_stateVariables.end()) {
-		assert(false);
-		return false;
-	}
-
-	m_stateVariables[name] = StateVariable(name, variablePointer);
-
-	return true;
-}
-
-
-bool Component::AddVariableUInt64(const string& name, uint64_t* variablePointer)
-{
-	StateVariableMap::iterator it = m_stateVariables.find(name);
-	if (it != m_stateVariables.end()) {
-		assert(false);
-		return false;
-	}
-
-	m_stateVariables[name] = StateVariable(name, variablePointer);
-
-	return true;
-}
-
-
-bool Component::AddVariableSInt8(const string& name, int8_t* variablePointer)
-{
-	StateVariableMap::iterator it = m_stateVariables.find(name);
-	if (it != m_stateVariables.end()) {
-		assert(false);
-		return false;
-	}
-
-	m_stateVariables[name] = StateVariable(name, variablePointer);
-
-	return true;
-}
-
-
-bool Component::AddVariableSInt16(const string& name, int16_t* variablePointer)
-{
-	StateVariableMap::iterator it = m_stateVariables.find(name);
-	if (it != m_stateVariables.end()) {
-		assert(false);
-		return false;
-	}
-
-	m_stateVariables[name] = StateVariable(name, variablePointer);
-
-	return true;
-}
-
-
-bool Component::AddVariableSInt32(const string& name, int32_t* variablePointer)
-{
-	StateVariableMap::iterator it = m_stateVariables.find(name);
-	if (it != m_stateVariables.end()) {
-		assert(false);
-		return false;
-	}
-
-	m_stateVariables[name] = StateVariable(name, variablePointer);
-
-	return true;
-}
-
-
-bool Component::AddVariableSInt64(const string& name, int64_t* variablePointer)
-{
-	StateVariableMap::iterator it = m_stateVariables.find(name);
-	if (it != m_stateVariables.end()) {
-		assert(false);
-		return false;
-	}
-
-	m_stateVariables[name] = StateVariable(name, variablePointer);
-
-	return true;
 }
 
 
